[package]
name = "bitrouter-providers"
version = { workspace = true }
edition = "2024"
description = "BitRouter provider adapters — HTTP client, auth, streaming"
authors = ["Archer <archer@bitrouter.ai>"]
license = "Apache-2.0"
repository = "https://github.com/bitrouter/bitrouter"
readme = "README.md"

[features]
default = ["openai", "anthropic", "google"]
openai = []
anthropic = []
google = []
rest = []
mcp = ["dep:tracing", "dep:rmcp"]
agentskills = ["dep:tracing", "dep:serde-saphyr", "dep:chrono", "dep:uuid", "dep:bitrouter-config", "tokio/fs"]

[dependencies]
bitrouter-core = { path = "../bitrouter-core", version = "0.17" }
tracing = { version = "0.1", optional = true }

base64 = "0.22"
futures-core = "0.3"
bytes = "1"
regex = "1.12"
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "query",
    "rustls",
    "stream",
] }
reqwest-middleware = { version = "0.5", features = ["json", "query"] }
schemars = { version = "1.2", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"

# mcp
rmcp = { version = "1.3", optional = true, default-features = false, features = [
    "client",
    "transport-streamable-http-client-reqwest",
    "transport-child-process",
] }

# agentskills
bitrouter-config = { path = "../bitrouter-config", version = "0.17", optional = true }
chrono = { version = "0.4", optional = true }
serde-saphyr = { version = "0.0", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }

[dev-dependencies]
tempfile = "3"
