[package]
name = "bitrouter-runtime"
version = "0.0.0"
edition = "2024"
description = "BitRouter runtime assembly for CLI and daemon execution"
authors = ["Archer <archer@bitrouter.ai>"]
license = "Apache-2.0"
repository = "https://github.com/bitrouter/bitrouter"

[dependencies]
bitrouter-api = { path = "../bitrouter-api", version = "0.0" }
bitrouter-core = { path = "../bitrouter-core", version = "0.0" }
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "2.0" }
tokio = { version = "1", features = ["net", "rt", "signal", "sync"] }
tracing = { version = "0.1" }
