[package]
name = "bitrouter"
version = { workspace = true }
edition = "2024"
description = "BitRouter"
authors = ["Archer <archer@bitrouter.ai>"]
license = "Apache-2.0"
repository = "https://github.com/bitrouter/bitrouter"
readme = "README.md"

[features]
default = ["tui", "sqlite", "postgres", "mpp-tempo"]
tui = ["dep:ratatui", "dep:crossterm", "dep:futures", "dep:anyhow"]
sqlite = [
    "bitrouter-accounts/sqlite",
    "bitrouter-observe/sqlite",
    "bitrouter-skills/sqlite",
]
postgres = [
    "bitrouter-accounts/postgres",
    "bitrouter-observe/postgres",
    "bitrouter-skills/postgres",
]
mysql = [
    "bitrouter-accounts/mysql",
    "bitrouter-observe/mysql",
    "bitrouter-skills/mysql",
]
mpp-tempo = [
    "bitrouter-api/mpp-tempo",
    "bitrouter-config/mpp-tempo",
    "dep:mpp",
    "dep:anyhow",
]
mpp-solana = [
    "bitrouter-api/mpp-solana",
    "bitrouter-config/mpp-solana",
    "dep:mpp",
    "dep:anyhow",
    "dep:bs58",
]

[dependencies]
# Internal crates
bitrouter-a2a = { path = "../bitrouter-a2a", version = "0.14" }
bitrouter-accounts = { path = "../bitrouter-accounts", version = "0.14" }
bitrouter-api = { path = "../bitrouter-api", version = "0.14" }
bitrouter-config = { path = "../bitrouter-config", version = "0.14" }
bitrouter-core = { path = "../bitrouter-core", version = "0.14" }
bitrouter-guardrails = { path = "../bitrouter-guardrails", version = "0.14" }
bitrouter-observe = { path = "../bitrouter-observe", version = "0.14" }
bitrouter-providers = { path = "../bitrouter-providers", version = "0.14", features = ["mcp"] }
bitrouter-skills = { path = "../bitrouter-skills", version = "0.14" }

# CLI
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.12"

# Runtime
dirs = "6"
reqwest = { version = "0.13", default-features = false, features = [
    "blocking",
    "json",
    "rustls",
] }
reqwest-middleware = { version = "0.5" }
sea-orm = { version = "1.1", default-features = false }
sea-orm-migration = { version = "1.1", default-features = false, features = [
    "runtime-tokio-rustls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde-saphyr = { version = "0.0" }
thiserror = { version = "2.0" }
tokio = { version = "1", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
warp = { version = "0.4.2", features = ["server"] }

# TUI (optional)
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", features = ["event-stream"], optional = true }
futures = { version = "0.3", optional = true }
anyhow = { version = "1", optional = true }

# x402 payment signing
async-trait = { version = "0.1" }
http = { version = "1.4" }
solana-client = { version = "3.1" }
solana-keypair = { version = "3.1" }
x402-signer = { version = "2.5" }

# MPP payment middleware (optional)
mpp = { version = "0.7", default-features = false, features = [
    "client",
    "tempo",
    "reqwest-rustls-tls",
], optional = true }
bs58 = { version = "0.5", optional = true }

[dev-dependencies]
tempfile = { version = "3" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
