[package]
name = "bitrouter"
version = { workspace = true }
edition = "2024"
description = "BitRouter"
authors = ["Archer <archer@bitrouter.ai>"]
license = "Apache-2.0"
repository = "https://github.com/bitrouter/bitrouter"
readme = "README.md"

[features]
default = [
    "tui",
    "sqlite",
    "postgres",
    "mpp-tempo",
    "mpp-solana",
    "mcp",
    "rest",
]
rest = ["bitrouter-providers/rest"]
mcp = ["bitrouter-api/mcp", "bitrouter-providers/mcp"]
tui = ["dep:bitrouter-tui"]
sqlite = ["bitrouter-accounts/sqlite", "bitrouter-observe/sqlite"]
postgres = ["bitrouter-accounts/postgres", "bitrouter-observe/postgres"]
mysql = ["bitrouter-accounts/mysql", "bitrouter-observe/mysql"]
mpp-tempo = [
    "bitrouter-api/mpp-tempo",
    "bitrouter-config/mpp-tempo",
    "dep:mpp",
    "dep:anyhow",
]
mpp-solana = [
    "bitrouter-api/mpp-solana",
    "bitrouter-config/mpp-solana",
    "dep:mpp",
    "dep:anyhow",
    "dep:bs58",
    "dep:sha2",
    "dep:curve25519-dalek",
]

[dependencies]
# Internal crates
bitrouter-accounts = { path = "../bitrouter-accounts", version = "0.17" }
bitrouter-api = { path = "../bitrouter-api", version = "0.17", default-features = false, features = [
    "openai",
    "anthropic",
    "google",
] }
bitrouter-config = { path = "../bitrouter-config", version = "0.17" }
bitrouter-core = { path = "../bitrouter-core", version = "0.17" }
bitrouter-guardrails = { path = "../bitrouter-guardrails", version = "0.17" }
bitrouter-observe = { path = "../bitrouter-observe", version = "0.17" }
bitrouter-providers = { path = "../bitrouter-providers", version = "0.17", features = [
    "agentskills",
] }

# CLI
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.12"

# Runtime
dirs = "6"
reqwest = { version = "0.13", default-features = false, features = [
    "blocking",
    "json",
    "rustls",
] }
reqwest-middleware = { version = "0.5" }
sea-orm = { version = "1.1", default-features = false }
sea-orm-migration = { version = "1.1", default-features = false, features = [
    "runtime-tokio-rustls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde-saphyr = { version = "0.0" }
thiserror = { version = "2.0" }
tokio = { version = "1", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
warp = { version = "0.4.2", features = ["server"] }

# TUI (optional)
bitrouter-tui = { path = "../bitrouter-tui", version = "0.17", optional = true }
anyhow = { version = "1", optional = true }


# MPP payment middleware (optional)
mpp = { package = "mpp-br", version = "0.8.1", default-features = false, features = [
    "client",
    "middleware",
    "tempo",
    "reqwest-rustls-tls",
], optional = true }
bs58 = { version = "0.5", optional = true }
sha2 = { version = "0.10", optional = true }
curve25519-dalek = { version = "4", default-features = false, optional = true }

# OWS wallet integration
ows-lib = { version = "1.1" }
ows-core = { version = "1.1" }
ows-signer = { version = "1.1" }
alloy = { version = "1", default-features = false, features = ["signers"] }
async-trait = { version = "0.1" }

[dev-dependencies]
tempfile = { version = "3" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
