[package]
name = "bitrouter"
version = { workspace = true }
edition = "2024"
description = "BitRouter"
authors = ["Archer <archer@bitrouter.ai>"]
license = "Apache-2.0"
repository = "https://github.com/bitrouter/bitrouter"
homepage = "https://bitrouter.ai"
readme = "README.md"

[features]
default = [
    "cli",
    "tui",
    "sqlite",
    "tempo",
    "mcp",
    "rest",
]
rest = ["bitrouter-providers/rest"]
mcp = ["bitrouter-providers/mcp"]
# Operator CLI surface: subcommands beyond `serve` (Wallet, Key, Route,
# Status, Start, Stop, Restart, Reload, Tools, Models, Agents, Policy,
# Auth, Reset, AgentProxy, the setup wizard, the daemon manager).
# Without `cli`, the binary exposes only `serve` (foreground) and is
# significantly smaller.
cli = ["dep:dialoguer", "dep:libc"]
tui = ["cli", "dep:bitrouter-tui", "bitrouter-providers/acp"]
# Database driver selection. Exactly one driver must be enabled (default: sqlite).
# Accounts, sessions, JWT auth, and persistent spend tracking are baked into the
# binary unconditionally — these features only choose the storage backend.
sqlite = ["bitrouter-accounts/sqlite", "bitrouter-observe/sqlite"]
postgres = ["bitrouter-accounts/postgres", "bitrouter-observe/postgres"]
mysql = ["bitrouter-accounts/mysql", "bitrouter-observe/mysql"]
# Payment chain selection. Payments (mpp client + server, OWS wallet, alloy)
# are baked into the binary unconditionally; these features choose which
# chain backends are wired up. At least one of `tempo` / `solana` must be
# enabled; default is `tempo`.
tempo = [
    "bitrouter-api/payments-tempo",
    "bitrouter-config/payments-tempo",
    "mpp/tempo",
]
solana = [
    "bitrouter-api/payments-solana",
    "bitrouter-config/payments-solana",
    "dep:bs58",
    "dep:curve25519-dalek",
]

[dependencies]
# Internal crates
bitrouter-accounts = { workspace = true }
bitrouter-api = { workspace = true }
bitrouter-config.workspace = true
bitrouter-core.workspace = true
bitrouter-guardrails.workspace = true
bitrouter-observe = { workspace = true }
bitrouter-providers = { workspace = true, features = ["agentskills"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
dialoguer = { version = "0.12", optional = true }

# Runtime
dirs = "6"
base64 = { version = "0.22" }
chrono = { version = "0.4" }
rand = { version = "0.9" }
reqwest = { version = "0.13", default-features = false, features = [
    "blocking",
    "json",
    "rustls",
] }
reqwest-middleware = { version = "0.5" }
sea-orm = { version = "1.1", default-features = false }
sea-orm-migration = { version = "1.1", default-features = false, features = [
    "runtime-tokio-rustls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde-saphyr = { version = "0.0" }
thiserror = { version = "2.0" }
tokio = { version = "1", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
warp = { version = "0.4.2", features = ["server"] }

# TUI (optional)
bitrouter-tui = { workspace = true, optional = true }
anyhow = { version = "1" }


# MPP payment middleware (always-on; chain backends gated by `tempo`/`solana` features)
mpp = { package = "mpp-br", version = "0.9", default-features = false, features = [
    "client",
    "middleware",
    "reqwest-rustls-tls",
] }
bs58 = { version = "0.5", optional = true }
sha2 = { version = "0.10" }
curve25519-dalek = { version = "4", default-features = false, optional = true }

# OWS wallet integration
ows-lib = { version = "1.1" }
ows-core = { version = "1.1" }
ows-signer = { version = "1.1" }
alloy = { version = "1", default-features = false, features = ["signers"] }
async-trait = { version = "0.1" }

[dev-dependencies]
tempfile = { version = "3" }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", optional = true }
