[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
# Config types are the canonical schema definition; the `config_file` feature
# pulls the module in. `schemars` derives the JSON Schema from them.
bitrouter-sdk = { workspace = true, features = ["config_file", "mcp", "acp"] }
schemars.workspace = true
serde_json.workspace = true
anyhow.workspace = true
