[package]
name = "bitrouter"
description = "BitRouter: an LLM API router. CLI + TUI + assembly library."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "bitrouter"
path = "src/lib.rs"

[[bin]]
name = "bitrouter"
path = "src/main.rs"

[dependencies]
bitrouter-sdk = { workspace = true, features = ["server", "config_file", "mcp", "acp"] }
bitrouter-providers.workspace = true
bitrouter-guardrails.workspace = true
bitrouter-observe = { workspace = true, features = ["otlp"] }
chrono.workspace = true
sha2.workspace = true
base64.workspace = true
rand.workspace = true
hex.workspace = true
serde-saphyr.workspace = true
sqlx = { workspace = true, features = ["sqlite"] }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
anyhow = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
wiremock = "0.6"
futures.workspace = true
tower = { workspace = true, features = ["util"] }
axum.workspace = true
axum-test = "20"
http.workspace = true
serde-saphyr.workspace = true
