[package]
name = "bitrouter"
description = "BitRouter: an LLM API router. CLI + TUI + assembly library."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "bitrouter"
path = "src/lib.rs"

[[bin]]
name = "bitrouter"
path = "src/main.rs"

[dependencies]
bitrouter-sdk = { workspace = true, features = ["server", "config_file", "mcp", "acp"] }
bitrouter-attestation.workspace = true
bitrouter-cloud-sdk.workspace = true
bitrouter-providers = { workspace = true, features = ["pkce"] }
bitrouter-skills.workspace = true
bitrouter-guardrails.workspace = true
bitrouter-observe = { workspace = true, features = ["otel-http"] }
bitrouter-chainlink = { workspace = true, optional = true }
bitrouter-attestation-plugin = { workspace = true, optional = true }
bitrouter-mcp = { path = "../../mcp", version = "1.0.0-alpha.14" }
chrono.workspace = true
sha2.workspace = true
base64.workspace = true
rand.workspace = true
hex.workspace = true
serde-saphyr.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
reqwest.workspace = true
anyhow = "1"
thiserror.workspace = true

[features]
# Off-by-default hackathon demo: route the `chainlink_confidential` protocol to
# the Chainlink Confidential Inference executor. A plain build excludes it.
chainlink-demo = ["dep:bitrouter-chainlink", "dep:bitrouter-attestation-plugin"]

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
wiremock = "0.6"
futures.workspace = true
tower = { workspace = true, features = ["util"] }
axum.workspace = true
axum-test = "20"
http.workspace = true
serde-saphyr.workspace = true
# OTLP/HTTP+protobuf decoding for full-stack tests that inspect the trace
# bodies the observe plugin pushes to the configured collector.
# https://docs.rs/opentelemetry-proto/0.27/
opentelemetry-proto = { version = "0.27", default-features = false, features = ["gen-tonic-messages", "trace"] }
prost = "0.13"
