[package]
name = "bitrouter"
description = "BitRouter: an LLM API router. CLI + TUI + assembly library."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "bitrouter"
path = "src/lib.rs"

[[bin]]
name = "bitrouter"
path = "src/main.rs"

[dependencies]
bitrouter-sdk = { workspace = true, features = ["server", "config_file", "mcp", "acp"] }
bitrouter-substrate.workspace = true
bitrouter-cloud-sdk.workspace = true
bitrouter-providers = { workspace = true, features = ["pkce"] }
bitrouter-skills.workspace = true
bitrouter-guardrails.workspace = true
bitrouter-observe = { workspace = true, features = ["otel-http"] }
bitrouter-mcp = { path = "../../crates/bitrouter-mcp", version = "1.0.0-alpha.28" }
chrono.workspace = true
sha2.workspace = true
base64.workspace = true
rand.workspace = true
hex.workspace = true
uuid = { workspace = true }
serde-saphyr.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
erased-serde = "0.4"
async-trait.workspace = true
reqwest.workspace = true
anyhow = "1"
thiserror.workspace = true
http.workspace = true
axum.workspace = true
futures.workspace = true
agent-client-protocol.workspace = true
tokio-util = { workspace = true, features = ["compat"] }
axoupdater = { version = "0.10", default-features = false, features = ["github_releases"] }
semver = "1"
ratatui = { version = "0.29", optional = true, features = [
    # Paragraph::line_count — wrap-aware tail-follow needs the rendered
    # height, not the logical line count.
    "unstable-rendered-line-info",
] }
crossterm = { version = "0.28", optional = true, features = ["event-stream"] }
similar = { version = "2", optional = true }
syntect = { version = "5", default-features = false, features = ["default-fancy"], optional = true }
two-face = { version = "0.4", default-features = false, features = ["syntect-fancy"], optional = true }
jsonschema = { version = "0.47.0", default-features = false }
rmcp = { workspace = true, features = ["server", "macros", "transport-io"] }
schemars.workspace = true
alacritty_terminal = { version = "0.25", optional = true }
portable-pty = { version = "0.9", optional = true }
termwiz = { version = "0.23", default-features = false, optional = true }
wezterm-input-types = { version = "0.1", optional = true }

[features]
default = ["tui"]
tui = [
    "dep:ratatui",
    "dep:crossterm",
    "dep:similar",
    "dep:syntect",
    "dep:two-face",
    "dep:alacritty_terminal",
    "dep:portable-pty",
    "dep:termwiz",
    "dep:wezterm-input-types",
]

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
wiremock = "0.6"
futures.workspace = true
tempfile.workspace = true
serde_json.workspace = true
tower = { workspace = true, features = ["util"] }
axum.workspace = true
axum-test = "21"
http.workspace = true
serde-saphyr.workspace = true
# OTLP/HTTP+protobuf decoding for full-stack tests that inspect the trace
# bodies the observe plugin pushes to the configured collector.
# https://docs.rs/opentelemetry-proto/0.32/
opentelemetry-proto = { version = "0.32", default-features = false, features = ["gen-tonic-messages", "trace"] }
prost = "0.14"
